Added a counter for items used